force-app/main/default/objects/cuda_signnow__CudaSign_Document__c/cuda_signnow__CudaSign_Document__c.object-meta.xml
<CustomObject>
    <label>SignNow Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SignNow Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>