force-app/main/default/objects/cuda_signnow__CudaSign_Document__c/fields/cuda_signnow__Contact__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CudaSign Documents</relationshipLabel>
    <relationshipName>CudaSign_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>