force-app/main/default/objects/cuda_signnow__CudaSign_Document__c/fields/cuda_signnow__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>