force-app/main/default/objects/cuda_signnow__CudaSign_Document__c/fields/cuda_signnow__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>