force-app/main/default/objects/cuda_signnow__CudaSign_Document__c/fields/cuda_signnow__Sent_to_emails__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Sent_to_emails__c</fullName>
    <label>Sent to Emails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>